--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vpn-server-node (1.0.1-2) stable; urgency=medium
+
+  * fix arch
+
+ -- Gijs Molenaar (launchpad ppa build key) <gijs@pythonic.nl>  Thu, 31 Aug 2017 12:14:45 +0200
+
 vpn-server-node (1.0.1-1) stable; urgency=medium
 
   * new upstream release
