--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vpn-server-node (1.0.1-3) stable; urgency=medium
+
+  * fix lintian errors and warnings
+
+ -- Gijs Molenaar (launchpad ppa build key) <gijs@pythonic.nl>  Fri, 13 Oct 2017 17:52:47 +0200
+
 vpn-server-node (1.0.1-2) stable; urgency=medium
 
   * fix arch
