--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+vpn-server-node (1.0.2-1) stable; urgency=medium
+
+  [ Gijs Molenaar ]
+  * New upstream version 1.0.2
+
+  [ Gijs Molenaar (launchpad ppa build key) ]
+
+ -- Gijs Molenaar (launchpad ppa build key) <gijs@pythonic.nl>  Fri, 20 Oct 2017 10:11:22 +0200
+
 vpn-server-node (1.0.1-3) stable; urgency=medium
 
   * fix lintian errors and warnings
