--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+vpn-server-node (1.0.3-1) stable; urgency=medium
+
+  [ Gijs Molenaar ]
+  * New upstream version 1.0.3
+
+  [ Gijs Molenaar (launchpad ppa build key) ]
+
+ -- Gijs Molenaar (launchpad ppa build key) <gijs@pythonic.nl>  Tue, 24 Oct 2017 07:49:09 +0200
+
 vpn-server-node (1.0.2-1) stable; urgency=medium
 
   [ Gijs Molenaar ]
