--- a/debian/install
+++ b/debian/install
@@ -3,12 +3,7 @@
 config/config.php.example => /etc/vpn-server-node/default/config.php
 config/firewall.php.example => /etc/vpn-server-node/firewall.php
 
-bin/generate-firewall.php => /usr/bin/vpn-server-node-generate-firewall
-bin/server-config.php => /usr/bin/vpn-server-node-server-config
-
-libexec/client-connect.php => /usr/libexec/vpn-server-node-client-connect
-libexec/client-disconnect.php => /usr/libexec/vpn-server-node-client-disconnect
-libexec/verify-otp.php => /usr/libexec/vpn-server-node-verify-otp
-
-src/* usr/share/vpn-server-node/src/SURFnet/VPN/Node
-tmp/vendor/ usr/share/vpn-server-node/
+bin /usr/share/vpn-server-node/
+libexec /usr/share/vpn-server-node/
+src /usr/share/vpn-server-node/
+tmp/vendor /usr/share/vpn-server-node/
