--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vpn-server-node (1.0.4-2) stable; urgency=medium
+
+  * add missing dependency
+
+ -- Gijs Molenaar (launchpad ppa build key) <gijs@pythonic.nl>  Wed, 08 Nov 2017 10:17:42 +0100
+
 vpn-server-node (1.0.4-1) stable; urgency=medium
 
   * new upstream release
